WIP fix navbar collapse

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,6 +96,14 @@ a:focus {
 	filter: invert(100%);
 }
 
+body > .navbar-collapse {
+	background: #f5f5f5;
+}
+body > .navbar-collapse .nav > li > a {
+	border-bottom: none;
+	font-weight: bold;
+}
+
 .brand .logo-reduced {
 	display: none;
 }
@@ -174,6 +182,7 @@ a:focus {
 
 [class^="logo"] {
 	height: 50px!important;
+	width: auto!important;
 }
 
 .brand {
